--- a/final_task/client/style.css
+++ b/final_task/client/style.css
@@ -30,7 +30,7 @@ main {
     padding: 1rem 5rem;
 }
 
-#btnNewMem {
+.btnNewMem {
     background-color: #8391e3;
     color: white;
     border: none;
@@ -42,6 +42,45 @@ main {
     width: 300px;
     height: 180px;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-  
 
+.boxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 2rem;
+    text-align: center;
+}
+
+footer {
+    text-align: center;
+}
+
+.createMembership, .createUser {
+    text-align: center;
+    background-color: white;
+    padding: 3rem;
+}
+
+.boxShadow {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.outsetBorder {
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+::placeholder{
+    color: lightgray;
+}
+
+.grey {
+    color: rgb(204, 204, 204);
+}
+
+.smallText {
+    font-size: 0.8rem;
+}
